fix for padding on mobile portfolio

--- a/style.css
+++ b/style.css
@@ -97,8 +97,6 @@ poppins: 100-900 plus italic
 
 .portfolioSection {
     text-align: center;
-    margin-right: 10vw;
-    margin-left: 10vw;
 }
 
 .aboutSection {
